--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,13 @@
+@font-face {
+  font-family: "Pretendard";
+  src: url("./Pretendard-Regular.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+
 .hello {
   color: red;
+  font-family: "Pretendard";
   background: url("./logo.png");
   background-repeat: no-repeat;
 }
