--- a/apps/client/src/style.css
+++ b/apps/client/src/style.css
@@ -1,15 +1,27 @@
-input {
+input,
+textarea {
   padding: 1rem;
   border: 1px solid #eaecee;
   outline: none;
 }
 
-input:hover {
+input:hover,
+textarea:hover {
   border: 1px solid #b2bac4;
 }
 
-input:focus {
+input:focus,
+textarea:focus {
   border: 1px solid #535961;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+
+  font-size: 1.2rem;
+  font-weight: 500;
 }
 
 .section {
@@ -43,23 +55,23 @@ input:focus {
   gap: 1rem;
 }
 
-.title {
+.title-label {
   grid-area: title;
 }
 
-.position {
+.position-label {
   grid-area: position;
 }
 
-.phoneNumber {
+.phoneNumber-label {
   grid-area: phoneNumber;
 }
 
-.email {
+.email-label {
   grid-area: email;
 }
 
-.coverLetter {
+.coverLetter-label {
   grid-area: coverLetter;
 }
 
