--- a/apps/client/src/style.css
+++ b/apps/client/src/style.css
@@ -22,6 +22,9 @@ textarea {
   border: 1px solid #eaecee;
   outline: none;
   width: 100%;
+  max-height: 220px;
+  min-height: 65px;
+  font-size: 1rem;
 }
 
 input:hover,
@@ -32,6 +35,11 @@ textarea:hover {
 input:focus,
 textarea:focus {
   border: 1px solid #535961;
+}
+
+textarea {
+  resize: vertical;
+  line-height: 150%;
 }
 
 label {
